[gd_scene load_steps=4 format=3 uid="uid://jqfitwl0ontt"]

[ext_resource type="Script" path="res://Scripts/UIInventory.gd" id="1_g8wqq"]
[ext_resource type="Texture2D" uid="uid://dgqimxxvrnmg5" path="res://Sprites/UI/InventoryBackground.png" id="2_ixj7e"]
[ext_resource type="PackedScene" uid="uid://hjd2q7nwpans" path="res://Scenes/UIInventorySlotPreview.tscn" id="3_nwaqh"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_g8wqq")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_ixj7e")

[node name="SelectedItemContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 78.0
offset_right = 495.0
offset_bottom = 579.0
theme_override_constants/v_separation = 10

[node name="SelectedSlot" parent="SelectedItemContainer" instance=ExtResource("3_nwaqh")]
layout_mode = 2

[node name="ItemContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 527.0
offset_top = 77.0
offset_right = 783.0
offset_bottom = 579.0
theme_override_constants/v_separation = 10

[node name="VBox" type="ScrollContainer" parent="ItemContainer"]
custom_minimum_size = Vector2(256, 512)
layout_mode = 2

[node name="Control" type="VBoxContainer" parent="ItemContainer/VBox"]
custom_minimum_size = Vector2(256, 66)
layout_mode = 2
